# PracticePathTracing

./: .gitmodules  CMakeLists.txt  README.md  vec3.h
doc/: README.md
include/: CMakeLists.txt  color.hpp  config.h  config.hpp  hit.h  hit.hpp  hittable.h  image.h  ray.h  ray.hpp  render.hpp  sphere.h  sphere.hpp  util.h  utils.hpp  vec3.h  vec3.hpp
include/Material/: brdf.hpp
include/background/: ibl.hpp  sky.hpp
include/bsdf/: bsdf.hpp  diffuse.hpp  material.hpp  mirror.hpp
include/camera/: CMakeLists.txt  camera.h  camera.hpp  pinhole_camera.h  pinhole_camera.hpp  thinlens_camera.hpp
include/core/: color.hpp  pixel.h  ray.h  ray.hpp  utils.h  utils.hpp  vec3.h  vec3.hpp
include/futaba/core/: image.h  pixel.h  util.h  vec3.h
include/futaba/render/: aggregate.h  hit.h  sphere.h
include/image/: CMakeLists.txt  image.h  image.hpp  pixel.h  pixel.hpp
include/lights/: light.hpp
include/materials/: brdf.hpp  diffuse.hpp  glass.hpp  material.hpp  mirror.hpp
include/object/: aggregate.hpp  hit.hpp  sphere.hpp
src/: CMakeLists.txt  main.cpp
src/futaba/: CMakeLists.txt  futaba.cpp
src/include/: ray.h  vec3.h
src/libcore/: CMakeLists.txt  image.cpp  util.cpp
src/librender/: render.cpp
src/sensors/: camera.cpp  camera.h  pinhole_camera.cpp  thinlens_camera.hpp
src/test/: vec3_test.cpp
test/: vec3_test.cpp
tests/: CMakeLists.txt  README.md  pinhole_camera_test.cpp  ppm_test.cpp  ray_test.cpp  sphere_test.cpp  test_aggregate.cpp  test_antialias.cpp  test_brdf.cpp  test_color.cpp  test_cornell_box.cpp  test_glass.cpp  test_ibl.cpp  test_image.cpp  test_image.h  test_main.cpp  test_pinhole_camera.cpp  test_pixel.cpp  test_pixel.h  test_ray.cpp  test_ray.h  test_sky.cpp  test_sphere.cpp  test_sphere.h  test_thinlens.cpp  test_vec3.cpp  test_vec3.h  vec3_test.cpp
